# project-airbnb

./: README.md  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_rating.py  0003_alter_review_experience_alter_review_room_and_more.py
rooms/: a  admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_currency.py
wishlists/: models.py
wishlists/migrations/: 0001_initial.py  (+1 more)
